-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
3
-
17053
This issue was created by maloo for Amir Shehata <amir.shehata@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/9dd98244-9bdb-11e4-b679-5254006e85c2.
The sub-test test_18f failed with the following error:
(2) MDS2 is not the expected 'partial'
Please provide additional information about the failure here.
Info required for matching: sanity-lfsck 18f