lustre/lfsck/lfsck_internal.h
@@ -446,7 +446,7 @@ struct lfsck_tgt_desc {
 	unsigned int	   ltd_dead:1,
 			   ltd_layout_done:1,
 			   ltd_namespace_done:1,
-			   ltd_namespace_failed:1;
+			   ltd_synced_failures:1;
 };
 
 struct lfsck_tgt_desc_idx {
